--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
 
       <div>
-            <button class="button" onclick="newButton()">Generate passwords</button>
+            <button class="button" onclick="newButton()">Generate password</button>
       </div>
 
       <hr>
