--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
        </div>
 
        <div class="btn">
-            <button class="button" onclick="newButton()">Generate passwords</button>
+            <button class="button" onclick="newButton()">Generate password</button>
        </div>
 
        <hr>
