--- a/index.html
+++ b/index.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
       <meta charset="UTF-8">
-      <meta name="viewport" 
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
       <title>Password Generator</title>
       <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
       <div class="container">
-            <div> 
-            <h1>
-                  Generate a 
-                  <br><span class="password">  Random password</span> 
-            </h1>
-            <p class="p-text">
-                  Never use an insecure password again.
-            </p>
-       </div>
+            <div>
+                  <h1>
+                        Generate a
+                        <br><span class="password"> Random password</span>
+                  </h1>
+                  <p class="p-text">
+                        Never use an insecure password again.
+                  </p>
+            </div>
 
-       <div class="btn">
-            <button class="button" onclick="newButton()">Generate password</button>
-       </div>
+            <div class="btn">
+                  <button class="button" onclick="newButton()">Generate password</button>
+            </div>
 
-       <hr>
+            <hr>
 
-       <div class="utput">
-            <input id="input-el2" class="utput-el" type="text" placeholder="Password">
-      
-            <input id="input-el1" class="utput-el" type="text" placeholder="Password">
-      </div>
-  <script src="index.js"></script>    
+            <div class="utput">
+                  <input id="input-el2" class="utput-el" type="text" placeholder="Password">
+
+                  <input id="input-el1" class="utput-el" type="text" placeholder="Password">
+            </div>
+            <script src="index.js"></script>
 </body>
+
 </html>
